alignment and size problem fixed

--- a/src/components/CoinCard/CoinCard.css
+++ b/src/components/CoinCard/CoinCard.css
@@ -1,8 +1,3 @@
-.coin-details-name:hover {
-    color: rgb(10, 82, 58);
-    text-decoration: underline;
-}
-
 .coin-name:hover {
     color: rgb(27, 126, 151);
 }
